# CS5330-Project3

./: CMakeLists.txt  README.md  colormap.cpp  enhanced.cpp  filters.cpp  onnx_inference.py  readme.md  sample.cpp  task1.cpp  task1_and_2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task9.cpp
data/: features.csv
include/: filters.hpp
